test_results_fixed2.log
specs
+- run test
   +- compile test Debug native 1 errors
test_runner.zig:261:21: error: root source file struct 'time' has no member named 'sleep'
            std.time.sleep(10 * std.time.ns_per_ms);
            ~~~~~~~~^~~~~~
/opt/homebrew/Cellar/zig/0.15.1/lib/zig/std/time.zig:1:1: note: struct declared here
const std = @import("std.zig");
^~~~~
referenced by:
    main: test_runner.zig:355:49
    callMain [inlined]: /opt/homebrew/Cellar/zig/0.15.1/lib/zig/std/start.zig:627:37
    callMainWithArgs [inlined]: /opt/homebrew/Cellar/zig/0.15.1/lib/zig/std/start.zig:587:20
    main: /opt/homebrew/Cellar/zig/0.15.1/lib/zig/std/start.zig:602:28
    1 reference(s) hidden; use '-freference-trace=5' to see all references
error: the following command failed with 1 compilation errors:
/opt/homebrew/Cellar/zig/0.15.1/bin/zig test -ODebug --dep evm --dep primitives --dep build_options -Mroot=/Users/williamcory/guillotine-mini/test/specs/root.zig -ODebug --dep primitives -Mevm=/Users/williamcory/guillotine-mini/src/root.zig -ODebug -Mprimitives=/Users/williamcory/guillotine-mini/src/primitives/root.zig -Mbuild_options=.zig-cache/c/eebb57f41c1d3f2bcb1f78f4ff354548/options.zig --test-runner /Users/williamcory/guillotine-mini/test_runner.zig --cache-dir .zig-cache --global-cache-dir /Users/williamcory/.cache/zig --name test --zig-lib-dir /opt/homebrew/Cellar/zig/0.15.1/lib/zig/ --listen=-

Build Summary: 1/4 steps succeeded; 1 failed
specs transitive failure
+- run test transitive failure
   +- compile test Debug native 1 errors

error: the following build command failed with exit code 1:
.zig-cache/o/5962a5fb08be06426cd8668efb6a7473/build /opt/homebrew/Cellar/zig/0.15.1/bin/zig /opt/homebrew/Cellar/zig/0.15.1/lib/zig /Users/williamcory/guillotine-mini .zig-cache /Users/williamcory/.cache/zig --seed 0x13cd429d -Z6eed343983381098 specs
